--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   utlansfest-web:
     container_name: utlansfest-web
-    image: 'registry-fors.aviliax.com/utlansfest-web'
+    image: 'registry-fors.aviliax.com/forsrobin/utlandsfest/portfolio::main'
     build:
       context: ./
       dockerfile: Dockerfile
